# otus-cpp-first-assignment

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  test_version_gtest.cpp
.devcontainer/: devcontainer.json
.github/workflows/: release.yml  release_on_tag.yml
tests/: CMakeLists.txt  test_version.cpp
